# songbooks

./: .gitignore  CNAME  README.md  build.py  editions.yml  index.html  main.py  pyproject.toml  test_build.py
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  copilot-setup.yml  deploy.yml
april-fools-2026/: index.html
assets/: style.css
complete/: index.html
current/: index.html
pr-preview/pr-12/: index.html
pr-preview/pr-12/assets/: style.css
pr-preview/pr-13/: index.html
pr-preview/pr-18/: index.html
pr-preview/pr-19/: index.html
pr-preview/pr-21/: index.html
pr-preview/pr-22/wexford-2026/: index.html
pr-preview/pr-23/current/: index.html
pr-preview/pr-24/: index.html
pr-preview/pr-25/: index.html
pr-preview/pr-26/current/: index.html
pr-preview/pr-28/: index.html
pr-preview/pr-30/womens-2026/: index.html
pr-preview/pr-33/: index.html
pr-preview/pr-33/complete/: index.html
pr-preview/pr-33/current/: index.html
pr-preview/pr-34/: index.html
pr-preview/pr-34/current/: index.html
pr-preview/pr-37/womens-2026/: index.html
pr-preview/pr-38/: index.html
pr-preview/pr-38/wexford-2026/: index.html
pr-preview/pr-39/: index.html
pr-preview/pr-42/: index.html
pr-preview/pr-43/: index.html
pr-preview/pr-44/: index.html
pr-preview/pr-45/: index.html
pr-preview/pr-46/: index.html
pr-preview/pr-47/: index.html
pride-2026/: index.html
templates/: index.html.j2
travel-songbook/: index.html
ukulele-hooley-2025/: index.html
wexford-2026/: index.html
womens-2026/: index.html
(+14 files in other folders)
