[project]
name = "songbooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-storage>=3.2.0",
    "jinja2>=3.1.6",
    "pymupdf>=1.26.3",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "requests-mock>=1.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "requests-mock>=1.12.1",
]
